# C5.0

./: README.md
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  classify.c  confmat.c  discr.c  extern.h  formrules.c  formtree.c  getnames.c  global.c  info.c  modelfiles.c  report.c  rules.c  ruletree.c
src/apps/C50/: CMakeLists.txt  attwinnow.c  c50.c  construct.c  contin.c  defns.h  getdata.c  implicitatt.c  mcost.c  p-thresh.c  prune.c  siftrules.c  sort.c  subset.c  trees.c  update.c  utility.c  xval.c
src/apps/Cubist/: CMakeLists.txt  getdata.c
src/apps/See5/: CMakeLists.txt  defns.h  global.h  hooks.h  sample.c
src/common/: getnames.c
src/include/: extern.h  text.h
